# compression-tester

./: .gitignore  CMakeLists.txt  draw_charts.py  info.json  main.cpp
bench/: core.cpp  core.hpp  fileholder.hpp  timer.hpp
directory/: collector.cpp
wrapper/: lz4.cpp  lz4.hpp  zstd.cpp  zstd.hpp
